# MyFileCopyLib

./: CMakeLists.txt  FileCopy.cpp  FileCopy.h  README.md  test.cpp
